--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 
 /* Your CSS Code here. */
-.holder
+.holder1
 {
 	display:flex;
+	justify-content:space-between;
+}
+.holder2
+{
+	display:flex;
+	flex-wrap:wrap;
 	justify-content:space-between;
 }
 .item1
